--- a/Components/Pages/Donhang.razor
+++ b/Components/Pages/Donhang.razor
@@ -11,7 +11,7 @@
         <!-- Hiển thị danh sách hóa đơn -->
         @if (orders != null && orders.Any())
         {
-            <h4>Lịch sử hóa đơn</h4>
+            <h4>Lịch sử đơn hàng</h4>
             <MudTable Items="orders" Striped="true" Hover="true">
                 <HeaderContent>
                     <MudTh>Hóa đơn ID</MudTh>
