--- a/Components/Pages/Ql/VanDon.razor
+++ b/Components/Pages/Ql/VanDon.razor
@@ -10,73 +10,74 @@
 
 <style>
     .clickable-cell {
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
     }
 
-    .clickable-cell:hover {
-    color: #f0f0f0;
-    }
+        .clickable-cell:hover {
+            color: #f0f0f0;
+        }
 
     .mud-large {
-    width: 100%;
-    max-width: 80em !important;
+        width: 100%;
+        max-width: 80em !important;
     }
 
     .img-product {
-    max-width: 100px;
-    width: fit-content;
+        max-width: 100px;
+        width: fit-content;
     }
 
     .img-show {
-    max-width: 100px;
+        max-width: 100px;
     }
 </style>
+<MudItem md="11">
+    <MudTable Items="pagedItems" ServerData="LoadServerData" Bordered="true" Dense="true" Hover="true">
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Danh sách đơn hàng</MudText>
+        </ToolBarContent>
 
-<MudTable Items="pagedItems" ServerData="LoadServerData" Bordered="true" Dense="true" Hover="true">
-    <ToolBarContent>
-        <MudText Typo="Typo.h6">Danh sách đơn hàng</MudText>
-    </ToolBarContent>
+        <HeaderContent>
+            <MudTh>Bill ID</MudTh>
+            <MudTh>Tên người dùng</MudTh>
+            <MudTh>Phương thức</MudTh>
+            <MudTh>Tổng giá</MudTh>
+            <MudTh>Trạng thái</MudTh>
+            <MudTh>Đơn duyệt</MudTh>
+            <MudTh>Tác vụ</MudTh>
 
-    <HeaderContent>
-        <MudTh>Bill ID</MudTh>
-        <MudTh>Tên người dùng</MudTh>
-        <MudTh>Phương thức</MudTh>
-        <MudTh>Tổng giá</MudTh>
-        <MudTh>Trạng thái</MudTh>
-        <MudTh>Đơn duyệt</MudTh>
-        <MudTh>Tác vụ</MudTh>
+        </HeaderContent>
 
-    </HeaderContent>
-
-    <RowTemplate>
-        <MudTd class="clickable-cell" DataLabel="Bill ID" >@context.BillId</MudTd>
-        <MudTd DataLabel="Tên người dùng">@context.UserName</MudTd>
-        <MudTd DataLabel="Phương thức">@context.PayStatus</MudTd>
-        <MudTd DataLabel="Tổng giá">@context.TotalPrice.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))</MudTd>
-        <MudTd DataLabel="Trạng thái">@context.Status</MudTd>
-        <MudTd DataLabel="Đơn duyệt">
-            @(context.ApproveBill ? "Đã duyệt" : "Chưa duyệt")
-        </MudTd>
+        <RowTemplate>
+            <MudTd class="clickable-cell" DataLabel="Bill ID">@context.BillId</MudTd>
+            <MudTd DataLabel="Tên người dùng">@context.UserName</MudTd>
+            <MudTd DataLabel="Phương thức">@context.PayStatus</MudTd>
+            <MudTd DataLabel="Tổng giá">@context.TotalPrice.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))</MudTd>
+            <MudTd DataLabel="Trạng thái">@context.Status</MudTd>
+            <MudTd DataLabel="Đơn duyệt">
+                @(context.ApproveBill ? "Đã duyệt" : "Chưa duyệt")
+            </MudTd>
 
 
-        <MudTd DataLabel="Tác vụ">
-            <MudMenu Icon="@Icons.Material.Filled.MoreVert" AriaLabel="Open user menu">                    
-                <MudMenuItem OnClick="() => HandleApprove(context)">Duyệt đơn</MudMenuItem>
-                <MudMenuItem OnClick="() => OpenProductDetails(context.BillId)">Cho hàng đi</MudMenuItem>
-                <MudMenuItem OnClick="() => HandleDelete(context)">Xóa đơn</MudMenuItem>
-                <MudMenuItem OnClick="() => CompleteApprove(context)">Giao thành công</MudMenuItem>
-            </MudMenu>
-            @* <MudButton Color="Color.Primary" OnClick="() => HandleApprove(context)">Duyệt đơn</MudButton>
+            <MudTd DataLabel="Tác vụ">
+                <MudMenu Icon="@Icons.Material.Filled.MoreVert" AriaLabel="Open user menu">
+                    <MudMenuItem OnClick="() => HandleApprove(context)">Duyệt đơn</MudMenuItem>
+                    <MudMenuItem OnClick="() => OpenProductDetails(context.BillId)">Cho hàng đi</MudMenuItem>
+                    <MudMenuItem OnClick="() => HandleDelete(context)">Xóa đơn</MudMenuItem>
+                    <MudMenuItem OnClick="() => CompleteApprove(context)">Giao thành công</MudMenuItem>
+                </MudMenu>
+                @* <MudButton Color="Color.Primary" OnClick="() => HandleApprove(context)">Duyệt đơn</MudButton>
             <MudButton Color="Color.Error" OnClick="() => HandleDelete(context)">Xóa đơn</MudButton> *@
-        </MudTd>
-    </RowTemplate>
+            </MudTd>
+        </RowTemplate>
 
-    <PagerContent>
-        <MudTablePager />
-    </PagerContent>
-</MudTable>
-<MudDialog @ref="_productDetailsDialog" MaxWidth="MaxWidth.Large" FullWidth="true" class="mud-large">
+        <PagerContent>
+            <MudTablePager />
+        </PagerContent>
+    </MudTable>
+</MudItem>
+<MudDialog @ref="_productDetailsDialog" class="mud-large">
 
     <DialogContent>
         <MudGrid>
@@ -93,7 +94,7 @@
                 <MudText>@productList.FirstOrDefault().Bills.Status</MudText>
             </MudItem>
             <MudItem xs="12" md="12" Class="mb-3 mt-3">
-                <MudText Typo="Typo.h6">Chọn kho </MudText>
+                @*  <MudText Typo="Typo.h6">Chọn kho </MudText>
                 <MudSelect T="int" @bind-Value="selectedWarehouseId" OnChange="OnWarehouseChange">
                     @foreach (var warehouse in WarehouseList)
                     {
@@ -102,7 +103,7 @@
                             @warehouse.NameWarehouse
                         </MudSelectItem>
                     }
-                </MudSelect>
+                </MudSelect> *@
 
             </MudItem>
             <MudItem xs="12" md="12" Class="mb-3 mt-3">
@@ -111,7 +112,7 @@
                     @foreach (var delivery in DeliveryList)
                     {
                         <MudSelectItem T="int" Value="@delivery.DeliveryId"
-                        Selected="@(delivery.DeliveryId == productList.FirstOrDefault()?.Bills.DeliveryId)">
+                                       Selected="@(delivery.DeliveryId == productList.FirstOrDefault()?.Bills.DeliveryId)">
                             @delivery.DeliveryName
                         </MudSelectItem>
                     }
@@ -163,10 +164,10 @@
     private int selectedAddressId;
     private int selectedWarehouseId = 0;
     private List<ProductBillDetailDto> productList = new List<ProductBillDetailDto>();
-    private MudDialog _productDetailsDialog;
-    private List<Delivery> DeliveryList;
-    private List<Warehouse> WarehouseList;
-    private Address AddressUser;
+    private MudDialog? _productDetailsDialog;
+    private List<Delivery>? DeliveryList;
+    private List<Warehouse>? WarehouseList;
+    private Address? AddressUser;
     private List<BillVanDonDTO> pagedItems = new();
     private TableState? state;
 
