--- a/Components/Pages/Ql/Thongkedoanhthu.razor
+++ b/Components/Pages/Ql/Thongkedoanhthu.razor
@@ -133,9 +133,9 @@ else if (userRoleId == "1")
             <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">
                 Doanh thu: @doanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
             </MudPaper>
-            <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">
+           @*  <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">
                 Dự đoán doanh thu tháng tới: @duDoanDoanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
-            </MudPaper>
+            </MudPaper> *@
         </div>
     </div>
 
